force-app/main/default/objects/CARE_App_Enrolled_SA__c/CARE_App_Enrolled_SA__c.object-meta.xml
<CustomObject>
    <description>SA(s) affected by the transaction in the CARE Application object</description>
    <label>CARE App Enrolled SA</label>
    <nameField>
        <displayFormat>CTSA{000000000}</displayFormat>
        <label>NAME  (APP SA Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE App Enrolled SA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>