force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/ACCT_ID_NEW__c.field-meta.xml
<CustomField>
    <fullName>ACCT_ID_NEW__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>ACCT ID NEW</label>
    <length>10</length>
    <type>Text</type>
</CustomField>