force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/ADJUSTED__c.field-meta.xml
<CustomField>
    <fullName>ADJUSTED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADJUSTED</label>
    <type>Checkbox</type>
</CustomField>