force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/APPLICATION__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION__c</fullName>
    <label>APPLICATION</label>
    <referenceTo>CARE_Application__c</referenceTo>
    <relationshipLabel>CARE App Enrolled SA</relationshipLabel>
    <relationshipName>CARE_App_Enrolled_SA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>