force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/CARE_CC_BATCH_DETAIL__c.field-meta.xml
<CustomField>
    <fullName>CARE_CC_BATCH_DETAIL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE CC BATCH DETAIL</label>
    <referenceTo>CARE_CC_Batch_Detail__c</referenceTo>
    <relationshipLabel>CARE App Enrolled SA</relationshipLabel>
    <relationshipName>CARE_App_Enrolled_SA</relationshipName>
    <type>Lookup</type>
</CustomField>