force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/CC_CL_CD__c.field-meta.xml
<CustomField>
    <fullName>CC_CL_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC CL CD</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>