force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/CCB_CONTACT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CCB_CONTACT_TYPE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB CONTACT TYPE</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>