force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/CSR_ADJUSTED__c.field-meta.xml
<CustomField>
    <fullName>CSR_ADJUSTED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSR ADJUSTED</label>
    <type>Checkbox</type>
</CustomField>