force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/CSR_USER__c.field-meta.xml
<CustomField>
    <fullName>CSR_USER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSR USER</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CARE_App_Enrolled_SA</relationshipName>
    <type>Lookup</type>
</CustomField>