force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/DAYS_OCCUPIED__c.field-meta.xml
<CustomField>
    <fullName>DAYS_OCCUPIED__c</fullName>
    <label>DAYS OCCUPIED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>