force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/IS_COMMON_AREA__c.field-meta.xml
<CustomField>
    <fullName>IS_COMMON_AREA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS COMMON AREA</label>
    <type>Checkbox</type>
</CustomField>