force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/LAST_BILL_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_BILL_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LAST BILL DATE</label>
    <type>Date</type>
</CustomField>