force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/NO_OF_RESIDENTS__c.field-meta.xml
<CustomField>
    <fullName>NO_OF_RESIDENTS__c</fullName>
    <label>NO OF RESIDENTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>