force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/OVERRIDE_IND__c.field-meta.xml
<CustomField>
    <fullName>OVERRIDE_IND__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OVERRIDE IND</label>
    <type>Checkbox</type>
</CustomField>