force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/QUALIFICATION_STATUS__c.field-meta.xml
<CustomField>
    <fullName>QUALIFICATION_STATUS__c</fullName>
    <label>QUALIFICATION STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>