force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/SA_ENTITY_NAME__c.field-meta.xml
<CustomField>
    <fullName>SA_ENTITY_NAME__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SA ENTITY NAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>