force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/SA_ID__c.field-meta.xml
<CustomField>
    <fullName>SA_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SA ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>