force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/SA_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>SA_START_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SA START DATE</label>
    <type>Date</type>
</CustomField>