force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Agreement</label>
    <referenceTo>EI_Site__c</referenceTo>
    <relationshipLabel>CARE App Enrolled SA</relationshipLabel>
    <relationshipName>CARE_App_Enrolled_SA</relationshipName>
    <type>Lookup</type>
</CustomField>