force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/TRANS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TRANS_TYPE__c</fullName>
    <label>TRANS TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Recert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>