force-app/main/default/objects/CARE_App_Enrolled_SA__c/fields/V_DETAIL_NO__c.field-meta.xml
<CustomField>
    <fullName>V_DETAIL_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>V DETAIL NO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>